--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <h1>Etch-a-Sketch</h1>
+        <button>Customize</button>
+    </header>
+    <div id="grid-container">
+        
+    </div>
 </body>
 </html>
