Add js code to create grid based on a given int

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <h1>Etch-a-Sketch</h1>
         <button>Customize</button>
     </header>
-    <div id="grid-container">
-        
-    </div>
+    <section id="container">
+        <div id="grid-container">
+            
+        </div>
+    </section>
 </body>
 </html>
