Attach rudimentary code to button to create primary grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Etch-a-Sketch</h1>
-        <button>Customize</button>
+        <button id="custom-grid-btn">Custom Grid</button>
     </header>
     <section id="container">
         <div id="grid-container">
